@@ -138,6 +138,9 @@
 	* stdio-common/Makefile (tests): Add tst-swprintf only if
 	$(build-shared) is yes.
 
+	* iconv/gconv_db.c (free_derivation): Check if deriv->steps
+	is NULL.
+
 2012-09-06  H.J. Lu  <hongjiu.lu@intel.com>
 
 	[BZ #14544]
